--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG12_U_sec_index_hash_tbl_data_cardinality_bigint_more_data_1krows.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG12_U_sec_index_hash_tbl_data_cardinality_bigint_more_data_1krows.yaml
@@ -173,7 +173,7 @@ microbenchmark:
                                 bindings:
                                       count: 1
                                       util: RandomNumber
-                                      params: [ 1000001, 1500001 ];
+                                      params: [ 1000001, 1500001 ]
 
             -   workload: INDG12_more_data_2_index_only_scan_range_skey_filter_all_row_matching_single_value
                 customTags: schematype=regular,partition=hash,pkey=single,cardinality=multiple,projection=all,filtercount=one,filteron=rangeskey,filtertype=pointselect
@@ -185,6 +185,6 @@ microbenchmark:
                                 bindings:
                                       count: 1
                                       util: RandomNumber
-                                      params: [ 1000001, 1500001 ];
+                                      params: [ 1000001, 1500001 ]
 
 
