Fixed value for addr column value

--- a/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW2_on_conflict_do_update.yaml
@@ -62,7 +62,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr1 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000]
 
@@ -79,7 +79,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr2 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000]
 
@@ -96,7 +96,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr3 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000]
 
@@ -113,7 +113,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr4 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000]
 
@@ -130,7 +130,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr5 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000]
 
@@ -146,7 +146,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr6 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000]
 
@@ -162,7 +162,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 1, 500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr7 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 1, 500000]
                               -   util: CyclicSeqIntGen
@@ -170,7 +170,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 500001, 1000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr8 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 500001, 1000000 ]
                               -   util: CyclicSeqIntGen
@@ -178,7 +178,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 2000001, 2500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr9 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 2000001, 2500000 ]
                               -   util: CyclicSeqIntGen
@@ -186,7 +186,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 2500001, 3000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr10 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 2500001, 3000000 ]
                               -   util: CyclicSeqIntGen
@@ -194,7 +194,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 3000001, 3500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr11 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 3000001, 3500000 ]
                               -   util: CyclicSeqIntGen
@@ -202,7 +202,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 3500001, 4000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr12 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 3500001, 4000000 ]
                               -   util: CyclicSeqIntGen
@@ -210,7 +210,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 4000001, 4500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr13 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 4000001, 4500000 ]
                               -   util: CyclicSeqIntGen
@@ -218,7 +218,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 4500001, 5000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr14 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 4500001, 5000000 ]
                               -   util: CyclicSeqIntGen
@@ -226,7 +226,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 4250001, 4750000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr15 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 4250001, 4750000 ]
                               -   util: CyclicSeqIntGen
@@ -234,7 +234,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 3250001, 3750000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr16 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 3250001, 3750000 ]
 
@@ -250,7 +250,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr17 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000]
 
@@ -267,6 +267,6 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr18 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000]
