--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
@@ -64,7 +64,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr1 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000]
 
@@ -81,7 +81,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr2 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000]
 
@@ -98,7 +98,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr3 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000]
 
@@ -115,7 +115,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr4 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000]
 
@@ -132,7 +132,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr5 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000]
 
@@ -148,7 +148,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr6 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000]
 
@@ -164,7 +164,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 1, 500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr7 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 1, 500000]
                               -   util: CyclicSeqIntGen
@@ -172,7 +172,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 500001, 1000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr8 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 500001, 1000000 ]
                               -   util: CyclicSeqIntGen
@@ -180,7 +180,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 2000001, 2500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr9 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 2000001, 2500000 ]
                               -   util: CyclicSeqIntGen
@@ -188,7 +188,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 2500001, 3000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr10 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 2500001, 3000000 ]
                               -   util: CyclicSeqIntGen
@@ -196,7 +196,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 3000001, 3500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr11 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 3000001, 3500000 ]
                               -   util: CyclicSeqIntGen
@@ -204,7 +204,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 3500001, 4000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr12 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 3500001, 4000000 ]
                               -   util: CyclicSeqIntGen
@@ -212,7 +212,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 4000001, 4500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr13 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 4000001, 4500000 ]
                               -   util: CyclicSeqIntGen
@@ -220,7 +220,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 4500001, 5000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr14 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 4500001, 5000000 ]
                               -   util: CyclicSeqIntGen
@@ -228,7 +228,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 4250001, 4750000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr15 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 4250001, 4750000 ]
                               -   util: CyclicSeqIntGen
@@ -236,7 +236,7 @@ microbenchmark:
                               -   util: CyclicSeqIntGen
                                   params: [ 3250001, 3750000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr16 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: CyclicSeqIntGen
                                   params: [ 3250001, 3750000 ]
 
@@ -252,7 +252,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr17 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000]
 
@@ -269,6 +269,6 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "Addr18 for the client" ]
+                                  params: [ "addr for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000]
