--- a/config/yugabyte/insert_with_index1.yaml
+++ b/config/yugabyte/insert_with_index1.yaml
@@ -12,18 +12,21 @@ yaml_version: v1.0
 use_dist_in_explain: true
 works:
     work:
-        time_secs: 120
+        time_secs: 300
         rate: unlimited
-        warmup: 10
+        warmup: 5
         active_terminals: 100
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
         setAutoCommit: true
         create:
-            - drop table IF EXISTS user_events;
-            - CREATE TABLE user_events (
-                event_id UUID PRIMARY KEY,
+            - drop table IF EXISTS user_events1;
+            - drop table IF EXISTS user_events2;
+            - drop table IF EXISTS user_events3;
+            - drop table IF EXISTS user_events4;
+            - CREATE TABLE user_events1 (
+                event_id UUID,
                 user_id INT NOT NULL,
                 event_time TIMESTAMP NOT NULL,
                 is_active BOOLEAN NOT NULL,
@@ -33,55 +36,144 @@ microbenchmark:
                 session_id UUID,
                 created_at TIMESTAMP NOT NULL,
                 updated_at TIMESTAMP
-              );
-            - CREATE INDEX idx_user_id ON user_events(user_id);
-            - CREATE INDEX idx_event_time ON user_events(event_time);
-            - CREATE INDEX idx_is_active ON user_events(is_active);
-            - CREATE INDEX idx_event_type ON user_events(event_type);
-        cleanup:
-            - drop table IF EXISTS user_events;
-        loadRules:
-            - table: user_events
-              rows: 1
-              columns:
-                - name: event_id
-                  util: RandomUUID
-                  params: []
-                - name: user_id
-                  util: PrimaryIntGen
-                  params: [1, 1]
-                - name: event_time
-                  util: RandomTimestamp
-                  params: [1]
-                - name: is_active
-                  util: RandomBoolean
-                  params: []
-                - name: event_type
-                  util: OneStringFromArray
-                  params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
-                - name: details
-                  util: OneStringFromArray
-                  params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
-                - name: priority
-                  util: RandomInt
-                  params: [1, 10]
-                - name: session_id
-                  util: RandomUUID
-                  params: []
-                - name: created_at
-                  util: RandomTimestamp
-                  params: [1]
-                - name: updated_at
-                  util: RandomTimestamp
-                  params: [1]
+              PRIMARY KEY(event_id asc));
+            - CREATE INDEX idx_1_user_id ON user_events1(user_id asc);
+            - CREATE INDEX idx_1_event_time ON user_events1(event_time asc);
+            - CREATE INDEX idx_1_is_active ON user_events1(session_id asc);
+            - CREATE INDEX idx_1_event_type ON user_events1(event_type asc);
+            - CREATE TABLE user_events2 (
+                event_id UUID,
+                user_id INT NOT NULL,
+                event_time TIMESTAMP NOT NULL,
+                is_active BOOLEAN NOT NULL,
+                event_type TEXT NOT NULL,
+                details TEXT,
+                priority INT,
+                session_id UUID,
+                created_at TIMESTAMP NOT NULL,
+                updated_at TIMESTAMP
+              PRIMARY KEY(event_id asc));
+            - CREATE INDEX idx_2_user_id ON user_events2(user_id asc);
+            - CREATE INDEX idx_2_event_time ON user_events2(event_time asc);
+            - CREATE INDEX idx_2_is_active ON user_events2(session_id asc);
+            - CREATE INDEX idx_2_event_type ON user_events2(event_type asc);
+            - CREATE TABLE user_events3 (
+                event_id UUID,
+                user_id INT NOT NULL,
+                event_time TIMESTAMP NOT NULL,
+                is_active BOOLEAN NOT NULL,
+                event_type TEXT NOT NULL,
+                details TEXT,
+                priority INT,
+                session_id UUID,
+                created_at TIMESTAMP NOT NULL,
+                updated_at TIMESTAMP
+              PRIMARY KEY(event_id asc));
+            - CREATE INDEX idx_3_user_id ON user_events3(user_id asc);
+            - CREATE INDEX idx_3_event_time ON user_events3(event_time asc);
+            - CREATE INDEX idx_3_is_active ON user_events3(session_id asc);
+            - CREATE INDEX idx_3_event_type ON user_events3(event_type asc);
+            - CREATE TABLE user_events4 (
+                event_id UUID,
+                user_id INT NOT NULL,
+                event_time TIMESTAMP NOT NULL,
+                is_active BOOLEAN NOT NULL,
+                event_type TEXT NOT NULL,
+                details TEXT,
+                priority INT,
+                session_id UUID,
+                created_at TIMESTAMP NOT NULL,
+                updated_at TIMESTAMP
+              PRIMARY KEY(event_id asc));
+            - CREATE INDEX idx_4_user_id ON user_events4(user_id asc);
+            - CREATE INDEX idx_4_event_time ON user_events4(event_time asc);
+            - CREATE INDEX idx_4_is_active ON user_events4(session_id asc);
+            - CREATE INDEX idx_4_event_type ON user_events4(event_type asc);
         executeRules:
-            - workload: insert_user_events
-              time_secs: 120
+            - workload: insert_events
               run:
-                - name: insert_event
-                  weight: 100
+                - name: insert_user_events1
+                  weight: 25
                   queries:
-                    - query: INSERT INTO user_events (event_id, user_id, event_time, is_active, event_type, details, priority, session_id, created_at, updated_at)
+                    - query: INSERT INTO user_events1 (event_id, user_id, event_time, is_active, event_type, details, priority, session_id, created_at, updated_at)
+                             VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+                      bindings:
+                        - util: RandomUUID
+                          params: []
+                        - util: PrimaryIntGen
+                          params: [2, 10000001]
+                        - util: RandomTimestamp
+                          params: [100000]
+                        - util: RandomBoolean
+                          params: []
+                        - util: OneStringFromArray
+                          params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
+                        - util: OneStringFromArray
+                          params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
+                        - util: RandomInt
+                          params: [1, 10]
+                        - util: RandomUUID
+                          params: []
+                        - util: RandomTimestamp
+                          params: [10000000]
+                        - util: RandomTimestamp
+                          params: [10000000]
+                - name: insert_user_events2
+                  weight: 25
+                  queries:
+                    - query: INSERT INTO user_events2 (event_id, user_id, event_time, is_active, event_type, details, priority, session_id, created_at, updated_at)
+                             VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+                      bindings:
+                        - util: RandomUUID
+                          params: []
+                        - util: PrimaryIntGen
+                          params: [2, 10000001]
+                        - util: RandomTimestamp
+                          params: [100000]
+                        - util: RandomBoolean
+                          params: []
+                        - util: OneStringFromArray
+                          params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
+                        - util: OneStringFromArray
+                          params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
+                        - util: RandomInt
+                          params: [1, 10]
+                        - util: RandomUUID
+                          params: []
+                        - util: RandomTimestamp
+                          params: [10000000]
+                        - util: RandomTimestamp
+                          params: [10000000]
+                - name: insert_user_events3
+                  weight: 25
+                  queries:
+                    - query: INSERT INTO user_events3 (event_id, user_id, event_time, is_active, event_type, details, priority, session_id, created_at, updated_at)
+                             VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+                      bindings:
+                        - util: RandomUUID
+                          params: []
+                        - util: PrimaryIntGen
+                          params: [2, 10000001]
+                        - util: RandomTimestamp
+                          params: [100000]
+                        - util: RandomBoolean
+                          params: []
+                        - util: OneStringFromArray
+                          params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
+                        - util: OneStringFromArray
+                          params: [['Login', 'Purchase', 'Logout', 'ProfileUpdate', 'PasswordReset']]
+                        - util: RandomInt
+                          params: [1, 10]
+                        - util: RandomUUID
+                          params: []
+                        - util: RandomTimestamp
+                          params: [10000000]
+                        - util: RandomTimestamp
+                          params: [10000000]
+                - name: insert_user_events4
+                  weight: 25
+                  queries:
+                    - query: INSERT INTO user_events4 (event_id, user_id, event_time, is_active, event_type, details, priority, session_id, created_at, updated_at)
                              VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
                       bindings:
                         - util: RandomUUID
