--- a/config/yugabyte/insert_with_index1.yaml
+++ b/config/yugabyte/insert_with_index1.yaml
@@ -35,7 +35,7 @@ microbenchmark:
                 priority INT,
                 session_id UUID,
                 created_at TIMESTAMP NOT NULL,
-                updated_at TIMESTAMP
+                updated_at TIMESTAMP,
                 PRIMARY KEY(event_id asc));
             - CREATE INDEX idx_1_user_id ON user_events1(user_id asc);
             - CREATE INDEX idx_1_event_time ON user_events1(event_time asc);
@@ -51,7 +51,7 @@ microbenchmark:
                 priority INT,
                 session_id UUID,
                 created_at TIMESTAMP NOT NULL,
-                updated_at TIMESTAMP
+                updated_at TIMESTAMP,
                 PRIMARY KEY(event_id asc));
             - CREATE INDEX idx_2_user_id ON user_events2(user_id asc);
             - CREATE INDEX idx_2_event_time ON user_events2(event_time asc);
@@ -67,7 +67,7 @@ microbenchmark:
                 priority INT,
                 session_id UUID,
                 created_at TIMESTAMP NOT NULL,
-                updated_at TIMESTAMP
+                updated_at TIMESTAMP,
                 PRIMARY KEY(event_id asc));
             - CREATE INDEX idx_3_user_id ON user_events3(user_id asc);
             - CREATE INDEX idx_3_event_time ON user_events3(event_time asc);
@@ -83,7 +83,7 @@ microbenchmark:
                 priority INT,
                 session_id UUID,
                 created_at TIMESTAMP NOT NULL,
-                updated_at TIMESTAMP
+                updated_at TIMESTAMP,
                 PRIMARY KEY(event_id asc));
             - CREATE INDEX idx_4_user_id ON user_events4(user_id asc);
             - CREATE INDEX idx_4_event_time ON user_events4(event_time asc);
