--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG1_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG1_hash_pointlookup_primarykey_vs_index.yaml
@@ -6,7 +6,7 @@
 #    Time to fetch 1 row based (= operator) on a predicate column which is HASH indexed
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
