--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG1_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG1_hash_pointlookup_primarykey_vs_index.yaml
@@ -6,7 +6,7 @@
 #    Time to fetch 1 row based (= operator) on a predicate column which is HASH indexed
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -107,6 +107,13 @@ microbenchmark:
                     util: RandomAString
                     params: [500, 500]
         executeRules:
+            - workload: scanG1_pkey_hash_point_lookup
+              customTags: customer=8,schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=indexed,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
+              run:
+                  - name: pkey_hash_point_lookup_test
+                    weight: 100
+                    queries:
+                        - query: select col_bigint_id_1 from pkey_hash_point_lookup_tbl_1 where col_bigint_id_1=500009
             - workload: scanG1_indx_hash_point_lookup
               customTags: customer=6,schematype=regular,partition=hash,skey=hash,cardinality=single,projection=indexed,filtercount=one,filteron=hashskey,filtertype=pointselect,queryshape=scan
               run:
