Updated the filter clause for query of UG5_6

--- a/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG5_update_included_colm.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/postgres/updateG5_update_included_colm.yaml
@@ -201,4 +201,4 @@ microbenchmark:
                   - name: update_10_cols
                     weight: 100
                     queries:
-                        - query: UPDATE ug5_cardinality_tbl2_child_1 SET col_bigint_id_3=1000000 where col_bigint_id_2<1001
+                        - query: UPDATE ug5_cardinality_tbl2_child_1 SET col_bigint_id_3=900000 where col_bigint_id_2<1001
