--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
@@ -133,7 +133,7 @@ microbenchmark:
                           pattern_count: 1024
                           bindings:
                               -   util: RandomUniqueIntGen
-                                  params: [ 4000001, 8000000 ]
+                                  params: [ 1, 8000000 ]
                               -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomAString
@@ -151,7 +151,7 @@ microbenchmark:
                           pattern_count: 1024
                           bindings:
                               -   util: RandomUniqueIntGen
-                                  params: [ 4000001, 8000000 ]
+                                  params: [ 1, 8000000 ]
                               -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomAString
