--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW6_on_conflict_do_update_range.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW6_on_conflict_do_update_range.yaml
@@ -134,8 +134,8 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomUniqueIntGen
+                                  params: [ 1, 8000000 ]
                               -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomAString
@@ -152,8 +152,8 @@ microbenchmark:
                         - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
+                              -   util: RandomUniqueIntGen
+                                  params: [ 1, 8000000 ]
                               -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomAString
