reduce execution time for postgres workload CW5_6 and CW6_6

--- a/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW5_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW5_on_conflict_do_update.yaml
@@ -142,6 +142,7 @@ microbenchmark:
 
 
             - workload: CW5_6_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_hash
+              time_secs: 120
               run:
                   - name: statement1_insert
                     weight: 100
