--- a/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW6_on_conflict_do_update_range.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/postgres/CW6_on_conflict_do_update_range.yaml
@@ -143,6 +143,7 @@ microbenchmark:
 
 
             - workload: CW6_6_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_range
+              time_secs: 60
               run:
                   - name: statement1_insert
                     weight: 100
